# libgs

./: README.md  pyproject.toml
libgs/data/: __init__.py
libgs/data/dataset/: __init__.py  base.py  blender.py  colmap.py  panoptic.py  vru.py
libgs/data/types/: __init__.py  camera.py  container.py  point_cloud.py
libgs/data/utils/: fetch.py  graphics.py  nerual_3d.py  video.py
libgs/metric/: __init__.py  psnr.py  ssim.py
libgs/metric/lpips/: __init__.py
libgs/model/: color_transformer.py  gaussian.py  merged_gaussian.py
libgs/pipeline/: __init__.py  config.py  loader.py
libgs/renderer/: __init__.py  network_gui.py
libgs/utils/: config.py  dist.py  general.py  git.py  time.py
pipeline/4dgs/: data.py  module.py  renderer.py  trainer.py
pipeline/4dgs/model/: deformation.py  gaussian.py  grid.py  hexplane.py  regulation.py
pipeline/base/: data.py  module.py
pipeline/scaffold/: module.py  renderer.py  trainer.py
pipeline/scaffold/model/: embedding.py  gaussian.py
tool/: convert.sh  convert4d.sh  database.py  downsample_point.py  llff2colmap.py  rebuild_colmap.sh  video.py
